# CitrusGB

./: .gitignore  .gitmodules  CMakeLists.txt
src/: Definitions.h  main.cpp
src/App/: Emulator.cpp  Emulator.h
src/App/Log/: Entry.h  Log.cpp  Log.h
src/GB/: APU.h  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  GBDefinitions.h  GPU.cpp  GPU.h  GameBoy.cpp  GameBoy.h  Instruction.h  Memory.cpp  Memory.h  Register.cpp  Register.h  State.h
